--- a/res/values/cm_strings.xml
+++ b/res/values/cm_strings.xml
@@ -38,8 +38,8 @@
     <string name="advanced_reboot_title">Advanced restart</string>
     <string name="advanced_reboot_summary">When unlocked, include options in the power menu for restarting into recovery or bootloader</string>
 
-    <string name="sakura_settings_dash_title">Sakura Configs</string>
-    <string name="sakura_settings_summary">Feels like spring</string>
+    <string name="magnus_settings_dash_title">Magnus Area</string>
+    <string name="magnus_settings_summary">Greatness Redefined!</string>
 
     <!-- Android debugging as root -->
     <string name="adb_enable_root">Rooted debugging</string>
