--- a/res/values/magnus_strings.xml
+++ b/res/values/magnus_strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-     Copyright (C) 2020-2021 Project Sakura
+     Copyright (C) 2022 MagnusOS
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -15,8 +15,8 @@
      limitations under the License.
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <!-- Sakura version -->
-    <string name="sakura_version">Sakura Version</string>
+    <!-- Magnus version -->
+    <string name="magnus_version">Magnus Version</string>
 
     <!-- App details: open play store link if app is user installed -->
     <string name="app_play_store">Google Play</string>
