--- a/res/xml/smart_charging.xml
+++ b/res/xml/smart_charging.xml
@@ -21,12 +21,12 @@
     android:key="smart_charging_screen"
     android:title="@string/smart_charging_title">
 
-    <com.sakura.settings.preferences.SystemSettingSwitchPreference
+    <com.magnus.settings.preferences.SystemSettingSwitchPreference
         android:key="smart_charging"
         android:title="@string/smart_charging_switch_title"
         android:defaultValue="false" />
 
-    <com.sakura.settings.preferences.CustomSeekBarPreference
+    <com.magnus.settings.preferences.CustomSeekBarPreference
         android:key="smart_charging_level"
         android:title="@string/smart_charging_level_title"
         android:max="100"
@@ -35,7 +35,7 @@
         android:defaultValue="80"
         android:dependency="smart_charging" />
 
-    <com.sakura.settings.preferences.CustomSeekBarPreference
+    <com.magnus.settings.preferences.CustomSeekBarPreference
         android:key="smart_charging_resume_level"
         android:title="@string/smart_charging_resume_level_title"
         android:max="99"
@@ -44,7 +44,7 @@
         android:defaultValue="60"
         android:dependency="smart_charging" />
 
-    <com.sakura.settings.preferences.SystemSettingSwitchPreference
+    <com.magnus.settings.preferences.SystemSettingSwitchPreference
         android:key="smart_charging_reset_stats"
         android:title="@string/smart_charging_reset_stats_title"
         android:summary="@string/smart_charging_reset_stats_summary"
