--- a/res/xml/smart_cutoff.xml
+++ b/res/xml/smart_cutoff.xml
@@ -21,12 +21,12 @@
     android:key="smart_cutoff_screen"
     android:title="@string/smart_cutoff_title">
 
-    <com.sakura.settings.preferences.SystemSettingSwitchPreference
+    <com.magnus.settings.preferences.SystemSettingSwitchPreference
         android:key="smart_cutoff"
         android:title="@string/smart_cutoff_switch_title"
         android:defaultValue="false" />
 
-    <com.sakura.settings.preferences.CustomSeekBarPreference
+    <com.magnus.settings.preferences.CustomSeekBarPreference
         android:key="smart_cutoff_level"
         android:title="@string/smart_cutoff_level_title"
         android:max="45"
@@ -35,7 +35,7 @@
         android:defaultValue="30"
         android:dependency="smart_cutoff" />
 
-    <com.sakura.settings.preferences.CustomSeekBarPreference
+    <com.magnus.settings.preferences.CustomSeekBarPreference
         android:key="smart_cutoff_resume_level"
         android:title="@string/smart_cutoff_resume_level_title"
         android:max="35"
