Settings: Disable banner highlight when pressed
Signed-off-by: ReveRTX <rev9rt@gmail.com>

--- a/res/xml/firmware_version.xml
+++ b/res/xml/firmware_version.xml
@@ -23,7 +23,8 @@
 
 <PreferenceScreen
     android:layout="@layout/magnus_logo"
-    android:key="magnus_logo" />
+    android:key="magnus_logo" 
+    android:selectable="false" />
 
     <!-- Android version -->
     <Preference
